# NOMO-web

./: .gitignore  README.md  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml
app/: managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: base.html  home.html  what-we-do.html
nomo/: asgi.py  settings.py  urls.py  wsgi.py
